# crafting-interpreters

chapter-1/: exercise-1.txt
chapter-1/exercise-2/hello-java/: build.gradle  settings.gradle
chapter-1/exercise-3/: CMakeLists.txt  main.c
chapter-4/jlox/: test.lox
chapter-4/jlox/src/main/java/: Lox.java  Scanner.java  TokenType.java
exercises/chapter-1/exercise-3/: main.c
exercises/exercise-2/hello-java/src/main/java/: HelloJava.java
exercises/exercise-3/: main.c
jlox/: book-notes.md  build.gradle  dev-notes.txt  notes.txt
jlox/src/main/java/com/craftinginterpreters/lox/: AstPrinter.java  Interpreter.java  Lox.java  Parser.java  Scanner.java  Token.java
jlox/src/main/java/com/craftinginterpreters/tool/: GenerateAst.java
